test/scc/pp/errors/051.a
051.t:1:2: error: #else without #if